# op-ticketing-system

./: .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yml  docker-run.sh  pyproject.toml  tasks.py
flaskr/: __init__.py  get_patient.py  models.py  register.py  validation.py
postman/: OP.postman_collection.json  OP.postman_environment.json
test/: test_apis.py  test_op_ticket_generator.py  test_validation.py
